<resources>
    <string name="all_unit_converter">Unit Converter</string>
    <string name="factor">Factor</string>
    <string name="binomial_newton">Newton Binomial Expansion</string>
    <string name="circle">Circle</string>
    <string name="circle_interaction">Two circles intersect</string>
    <string name="circle_tangent">Two circles intersect</string>
    <string name="close">Close</string>
    <string name="collinear">Straight</string>
    <string name="column">columns</string>
    <string name="copied">Copied</string>
    <string name="create">Create</string>
    <string name="d_n_ph_n_m_m_ncalc">Software project NCalc +</string>
    <string name="delete_desc">Erase</string>
    <string name="derivative">Derivative</string>
    <string name="error_input_num">Number format error</string>
    <string name="error">Error</string>
    <string name="expand">Expand</string>
    <string name="factor_prime">Prime Factor</string>
    <string name="factor_polynomial">Factor Polynomial</string>
    <string name="ellipse">Ellipse</string>
    <string name="feedback">Feedback</string>
    <string name="gi_i_thi_u_v_calc">About Ncalc+</string>
    <string name="gi_tr_nh_nh_t">Smallest value</string>
    <string name="graph">Graph</string>
    <string name="help">Help</string>
    <string name="enter_expression">Enter expression</string>
    <string name="input_equation">Enter an equation:</string>
    <string name="inside">Inside</string>
    <string name="interaction">Intersecting</string>
    <string name="l_ch_chu_n">Standard deviation</string>
    <string name="yes">Yes</string>
    <string name="vector">vector</string>
    <string name="title_activity_app_about">About NCalc+</string>
    <string name="title_activity_geometry">2D Cartesian Geometry</string>
    <string name="title_activity_graph">Graph</string>
    <string name="title_activity_matrix_calculator">Matrix</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_unit_converter_acitvity">Unit Converter</string>
    <string name="th_m_ph_ng_tr_nh">More</string>
    <string name="table">Statistical</string>
    <string name="t_ng">sum</string>
    <string name="speech_not_supported">Voice recognition is not supported</string>
    <string name="speak_expression">Read expressions</string>
    <string name="solve_system_equation">Solve a system of equations</string>
    <string name="solve_for_var">Solve equations with variables (x, y, z, …): </string>
    <string name="solve_equation">Solve Equation</string>
    <string name="simplify_expression">Simplify Expression</string>
    <string name="simplify">Simplify</string>
    <string name="settings">Setting</string>
    <string name="science_calculator">Scientific Calculator</string>
    <string name="row">rows</string>
    <string name="process">Handling</string>
    <string name="polygon">polygon</string>
    <string name="please_wait">Loading, please wait</string>
    <string name="parallel">Parallel</string>
    <string name="outside">Outside</string>
    <string name="auto_process">Automatic data processing</string>
    <string name="line">Straight line</string>
    <string name="linear_system">Solve System of Equations</string>
    <string name="logic_calculator">Base-N Calculator</string>
    <string name="matrix">Matrix</string>
    <string name="matrix_op_inverse_a">Inverse A</string>
    <string name="matrix_op_inverse_b">Inverse B</string>
    <string name="matrix_op_tranpose_b">Trans B</string>
    <string name="matrix_op_tranpose_a">Trans A</string>
    <string name="maximum">The maximum value</string>
    <string name="more">More …</string>
    <string name="msg_delete_matrix">Creating a new matrix will delete the existing matrix. Are you sure?</string>
    <string name="nav_descartes">2D Geometry</string>
    <string name="nh_p_c_c_n_c_a_h">Enter the variables of the system of equations:</string>
    <string name="nh_p_d_li_u">Enter a value:</string>
    <string name="not_line">Not a straight line</string>
    <string name="not_interaction">No intersections</string>
    <string name="not_in_circle">None of the circle</string>
    <string name="nh_p_c_c_ph_ng_tr_nh_t_o_th_nh_h_ph">
        Enter equations forming a system of equations, then enter the equation system variables \n
        For example: press [+] and enter the following equations: \n
         x + y + z = 2 \n
         x - y + 2z = 6 \n
         z + y = 2 \n
        Then enter the variables you are looking for: x, y, z \n
        Press [SOLVE]
    </string>
    <string name="nh_p_d_li_u_c_ch_nhau_b_i_d_u_ph_y_nv_d_12_232_43_4">Data entries separated by a comma (,) \n \ For example: 12, 232.43, 4</string>
    <string name="above_circle">Located on the circle</string>
    <string name="not_input_equation">Unknown equations</string>
    <string name="noFunDisp">There is no function to display</string>
    <string name="tapFun">Choose a function</string>
    <string name="save">Save</string>
    <string name="add_function">Add function</string>
    <string name="cannotwrite">Unable to write the file</string>
    <string name="not_variable">
        <![CDATA[
        No variable found </br>
        Please enter an equation with variable x</br>
        Examples: 2x + 1 or 2x^2 + x - 2
        ]]>
    </string>
    <string name="history">History</string>
    <string name="pref_title_font">Font</string>
    <string name="pref_title_theme">Theme</string>
    <string name="solve">Solve</string>
    <string name="tangent">tangent</string>
    <string name="what_new">What\'s new?</string>
    <string name="translate">Translate</string>
    <string name="license">License</string>
    <string name="eval">Evaluate</string>
    <string name="limit">Find Limit</string>
    <string name="rate_this_app">Rate App</string>
    <string name="integrate">Integrate</string>
    <string name="primitive">Primitive</string>
    <string name="analytics">Analytics</string>
    <string name="algebra">Algebra</string>
    <string name="probability_statistics">Probability statistics</string>
    <string name="combination">Combination</string>
    <string name="permutation">Permutation</string>
    <string name="module">Modulo</string>
    <string name="number_theory">Number Theory</string>
    <string name="tit_trig_expand">Trigonometry - Expand</string>
    <string name="tit_trig_reduce">Trigonometry - Reduce</string>
    <string name="tit_trig_to_exp">Trigonometry to Exponent</string>
    <string name="trigonometry">Trigonometry</string>
    <string name="close_drawer">Close drawer</string>
    <string name="catalan_number">Catalan Number</string>
    <string name="prime">Prime Number</string>
    <string name="fibonacci">Fibonacci Number</string>
    <string name="divisors">Divisors</string>
    <string name="pi_number">Pi Number</string>
    <string name="matrix_a" translatable="false">Matrix A</string>
    <string name="matrix_b" translatable="false">Matrix B</string>
    <string name="all_functions">All functions</string>
    <string name="getting_started">Getting Started</string>
</resources>