<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2017 Tran Le Duy
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_getting_started"
        android:icon="@drawable/ic_book_black_24dp"
        android:title="@string/getting_started"/>
    <item
        android:id="@+id/action_document"
        android:icon="@drawable/ic_book_black_24dp"
        android:title="@string/all_functions"/>

    <item android:title="@string/algebra">
        <menu>
            <item
                android:id="@+id/nav_sci_calc"
                android:icon="@drawable/ic_calculator_black"
                android:title="@string/science_calculator"/>
            <!--<item-->
            <!--android:id="@+id/nav_hand_calc"-->
            <!--android:icon="@drawable/ic_gesture_black_24dp"-->
            <!--android:title="@string/hand_calc" />-->

            <!--<item-->
            <!--android:id="@+id/nav_hand_geo"-->
            <!--android:icon="@drawable/ic_action_name"-->
            <!--android:title="@string/hand_geome" />-->
            <item
                android:id="@+id/nav_base"
                android:icon="@drawable/ic_base_black"
                android:title="@string/logic_calculator"/>
            <item
                android:id="@+id/nav_solve_equation"
                android:icon="@drawable/ic_functions_2_black"
                android:title="@string/solve_equation"/>
            <item
                android:id="@+id/system_equation"
                android:icon="@drawable/ic_functions_2_black"
                android:title="@string/linear_system"/>
            <item
                android:id="@+id/nav_graph"
                android:icon="@drawable/ic_graph_black"
                android:title="@string/title_activity_graph"/>
            <item
                android:id="@+id/nav_geometric_descartes"
                android:icon="@drawable/ic_graph_black"
                android:title="@string/nav_descartes"/>

            <item
                android:id="@+id/nav_simplify_equation"
                android:icon="@drawable/ic_functions_2_black"
                android:title="@string/simplify_expression"/>

            <item
                android:id="@+id/nav_factor_equation"
                android:icon="@drawable/ic_functions_2_black"
                android:title="@string/factor_polynomial"/>

            <item
                android:id="@+id/nav_unit"
                android:icon="@drawable/ic_unit_converter"
                android:title="@string/all_unit_converter"/>

            <item
                android:id="@+id/nav_expand_binomial"
                android:icon="@drawable/ic_functions_2_black"
                android:title="@string/binomial_newton"/>

            <item
                android:id="@+id/nav_matrix"
                android:icon="@drawable/ic_matrix_black"
                android:title="@string/matrix"/>


            <item
                android:icon="@drawable/ic_more_vert_black_24dp"
                android:title="@string/more"
                android:visible="false"/>
        </menu>
    </item>

    <item android:title="@string/analytics">
        <menu>
            <item
                android:id="@+id/nav_derivitive"
                android:icon="@drawable/ic_der_black"
                android:title="@string/derivative"/>

            <item
                android:id="@+id/nav_primitive"
                android:icon="@drawable/ic_primitive_black"
                android:title="@string/primitive"/>

            <item
                android:id="@+id/nav_integrate"
                android:icon="@drawable/ic_integral"
                android:title="@string/integrate"/>

            <item
                android:id="@+id/nav_limit"
                android:icon="@drawable/ic_lim_black"
                android:title="@string/limit"/>
        </menu>
    </item>

    <item android:title="@string/probability_statistics">
        <menu>
            <item
                android:id="@+id/nav_combination"
                android:icon="@drawable/ic_combination_black"
                android:title="@string/combination"/>
            <item
                android:id="@+id/nav_permutation"
                android:icon="@drawable/ic_permutation_black"
                android:title="@string/permutation"/>

            <item
                android:id="@+id/nav_table"
                android:icon="@mipmap/ic_fraction_black"
                android:title="@string/table"
                android:visible="false"/>
        </menu>
    </item>
    <item android:title="@string/number_theory">
        <menu>
            <item
                android:id="@+id/nav_prime_factor"
                android:icon="@drawable/ic_prime_black"
                android:title="@string/factor_prime"/>
            <item
                android:id="@+id/nav_mod"
                android:icon="@drawable/ic_mod_black"
                android:title="@string/module"/>
            <item
                android:id="@+id/nav_catalan"
                android:icon="@drawable/ic_prime_black"
                android:title="@string/catalan_number"/>
            <item
                android:id="@+id/nav_prime"
                android:icon="@drawable/ic_prime_black"
                android:title="@string/prime"/>
            <item
                android:id="@+id/action_divisors"
                android:icon="@drawable/ic_prime_black"
                android:title="@string/divisors"/>
            <item
                android:id="@+id/action_pi_number"
                android:icon="@drawable/ic_prime_black"
                android:title="@string/pi_number"/>
            <!--<item-->
            <!--android:id="@+id/nav_gcd"-->
            <!--android:enabled="false"-->
            <!--android:icon="@drawable/ic_mod_black"-->
            <!--android:title="@string/gcd" />-->
            <!--<item-->
            <!--android:id="@+id/nav_lcm"-->

            <!--android:enabled="false"-->
            <!--android:icon="@drawable/ic_mod_black"-->
            <!--android:title="@string/lcm" />-->
            <item
                android:id="@+id/nav_fibo"
                android:icon="@drawable/ic_prime_black"
                android:title="@string/fibonacci"/>
        </menu>
    </item>
    <item
        android:icon="@drawable/ic_trig_black"
        android:title="@string/trigonometry">
        <menu>
            <item
                android:id="@+id/nav_trig_expand"
                android:icon="@drawable/ic_trig_black"
                android:title="@string/tit_trig_expand"/>
            <item
                android:id="@+id/nav_trig_reduce"
                android:icon="@drawable/ic_trig_black"
                android:title="@string/tit_trig_reduce"/>
            <item
                android:id="@+id/nav_trig_to_exp"
                android:icon="@drawable/ic_trig_black"
                android:title="@string/tit_trig_to_exp"/>
        </menu>
    </item>
    <item android:title="@string/more">
        <menu>
            <item
                android:id="@+id/nav_setting"
                android:icon="@drawable/ic_settings_black_48dp"
                android:title="@string/settings"/>
            <item
                android:id="@+id/nav_rate"
                android:icon="@drawable/ic_star_rate_black_18dp"
                android:title="@string/rate_this_app"/>
            <item
                android:id="@+id/nav_about_app"
                android:icon="@drawable/ic_info_black_24dp"
                android:title="@string/gi_i_thi_u_v_calc"/>
        </menu>
    </item>
</menu>

