<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2017 Tran Le Duy
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:visibility="visible">

    <HorizontalScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:overScrollMode="never"
        android:scrollbars="none"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingLeft="16dp">

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_solve"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/solve" />

            <android.support.v7.widget.AppCompatButton
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/graph" />


            <android.support.v7.widget.AppCompatButton
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/factor" />

            <android.support.v7.widget.AppCompatButton
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/derivative" />

            <android.support.v7.widget.AppCompatButton
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/simplify" />


            <android.support.v7.widget.AppCompatButton
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/expand" />

            <android.support.v7.widget.AppCompatButton
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/factor_prime"
                android:visibility="gone" />

        </LinearLayout>
    </HorizontalScrollView>
</FrameLayout>