<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2017 Tran Le Duy
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="?actionBarSize"
    android:background="?colorPrimary"
    android:orientation="horizontal">

    <android.support.v7.widget.AppCompatImageButton
        android:id="@+id/img_back"
        style="?imageButtonStyle"
        android:background="?selectableItemBackground"
        android:contentDescription="@string/close_drawer"
        android:padding="8dp"
        android:src="@drawable/ic_arrow_back_white_24dp" />

    <android.support.v7.widget.AppCompatImageButton
        android:id="@+id/img_setting"
        style="?imageButtonStyle"
        android:background="?selectableItemBackground"
        android:contentDescription="@string/settings"
        android:padding="8dp"
        android:src="@drawable/ic_settings_white_24dp" />

    <android.support.v7.widget.AppCompatImageButton
        android:id="@+id/img_share"
        style="?imageButtonStyle"
        android:background="?selectableItemBackground"
        android:contentDescription="share"
        android:padding="8dp"
        android:src="@drawable/ic_share_white_24dp" />


    <android.support.v7.widget.AppCompatImageButton
        android:id="@+id/img_help"
        style="?imageButtonStyle"
        android:background="?selectableItemBackground"
        android:contentDescription="@string/help"
        android:padding="8dp"
        android:src="@drawable/ic_help_white_24dp" />

    <android.support.v7.widget.AppCompatImageButton
        android:id="@+id/img_rate"
        style="?imageButtonStyle"
        android:background="?selectableItemBackground"
        android:contentDescription="@string/help"
        android:padding="8dp"
        android:src="@drawable/ic_star_rate_white_18dp" />

</LinearLayout>

